--- a/src/index.css
+++ b/src/index.css
@@ -68,27 +68,29 @@
 
   body,
   html {
-    overflow-y: auto;
     overflow-x: hidden;
     background: #000;
+    scrollbar-width: none; /* Firefox */
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  html::-webkit-scrollbar,
+  body::-webkit-scrollbar {
+    display: none;
   }
 
   * {
     @apply border-border;
-    scrollbar-width: thin;
-    scrollbar-color: #ea384c #000;
+    scrollbar-width: none;
   }
 
   body {
     @apply bg-background text-foreground;
     font-family: Inter, sans-serif;
-    scrollbar-gutter: stable;
   }
 
   html {
     @apply scroll-smooth;
-    scrollbar-width: thin;
-    scrollbar-color: #ea384c #000;
   }
 
   .text-outline {
